--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,25 @@
     transition: opacity 0.3s ease-in-out;
 }
 
-.photo-card:hover {
-    opacity: 0.7;
-}
 .photo-card__image-container {
+    position: relative;
     overflow: hidden;
     border-radius: 10px;
+}
+.photo-card__caption {
+    height: 0px;
+    transition: height 0.3s 0.5s ease-out;
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #0008;
+    color: #fff;
+}
+.photo-card:hover {
+    opacity: 0.9;
+}
+.photo-card:hover .photo-card__caption {
+    height: 100px;
 }
